# base

./: .pre-commit-config.yaml  Cargo.toml  Taskfile.yml
.github/workflows/: test.yml
src/: lib.rs  macros.rs  perf.rs
src/macros/: invoke.rs  mark_hot.rs
src/perf/: verify_hot_path.rs
