[package]
name = "base"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = []
perf = ["dep:syn", "dep:quote", "dep:walkdir", "dep:regex"]

[dependencies]
paste = "1"
syn = { version = "2", features = ["full"], optional = true }
quote = { version = "1", optional = true }
walkdir = { version = "2", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
